--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "install": "^0.13.0",
     "nanoid": "^4.0.0",
     "npm": "^9.4.0",
-    "react": "^18.1.0",
+    "overlayscrollbars": "^2.0.3",
+    "overlayscrollbars-react": "^0.5.0",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.7.1",
