--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.5",
+    "chakra-react-select": "^4.4.3",
     "chart.js": "^4.2.0",
     "formik": "^2.2.9",
     "framer-motion": "^8.5.3",
